tests/output/self_hosted/typedef_double_colon_error.txt
tests/typedef_double_colon_error.oomph:1: error: typedef name must not contain '::'

    typedef foo::Bar = Int
            ^^^^^^^^

assert() failed in "self_hosted/error.oomph", line N
